# NazaraEngine

./: .editorconfig  .gitattributes  .gitignore  .ruleset  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  ChangeLog.md  Dockerfile  Doxyfile  INSTALL.md  LICENSE  README.md  THANKS.md  appveyor.yml  dummy.txt  emscripten.patch  readme.md  readme.txt  readme_fr.md  readme_fr.txt  test.txt  wasm.config  writing style.md  xmake.lua
SDK/src/NDK/: Application.cpp  BaseComponent.cpp  BaseSystem.cpp  BaseWidget.cpp  CMakeLists.txt  Canvas.cpp  ClientApplication.cpp  ClientSdk.cpp  Console.cpp  Entity.cpp  EntityHandle.cpp  EntityList.cpp  FreeFlyCamera.cpp  LuaAPI.cpp  LuaAPI_Audio.cpp  LuaAPI_Core.cpp  LuaAPI_Graphics.cpp  LuaAPI_Math.cpp  LuaAPI_Network.cpp  LuaAPI_Renderer.cpp  LuaAPI_SDK.cpp  LuaAPI_Utility.cpp  LuaBinding.cpp  LuaBinding.hpp  LuaBinding_Audio.cpp  LuaBinding_Base.cpp  LuaBinding_Core.cpp  LuaBinding_Graphics.cpp  LuaBinding_Math.cpp  LuaBinding_Math.cpp.save-failed  LuaBinding_Network.cpp  LuaBinding_Renderer.cpp  LuaBinding_SDK.cpp  LuaBinding_Utility.cpp  Sdk.cpp  State.cpp  World.cpp
SDK/src/NDK/Components/: CameraComponent.cpp  CollisionComponent.cpp  CollisionComponent2D.cpp  CollisionComponent3D.cpp  ConstraintComponent2D.cpp  DebugComponent.cpp  GraphicsComponent.cpp  LifetimeComponent.cpp  LightComponent.cpp  ListenerComponent.cpp  NodeComponent.cpp  ParticleEmitterComponent.cpp  ParticleGroupComponent.cpp  PhysicsComponent.cpp  PhysicsComponent2D.cpp  PhysicsComponent3D.cpp  VelocityComponent.cpp
SDK/src/NDK/Lua/: LuaBinding.cpp  LuaBinding_Audio.cpp  LuaBinding_Base.cpp  LuaBinding_Core.cpp  LuaBinding_Graphics.cpp  LuaBinding_Math.cpp  LuaBinding_Network.cpp  LuaBinding_Platform.cpp  LuaBinding_Renderer.cpp  LuaBinding_SDK.cpp  LuaBinding_Utility.cpp
SDK/src/NDK/Systems/: DebugSystem.cpp  LifetimeSystem.cpp  ListenerSystem.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  PhysicsSystem2D.cpp  PhysicsSystem3D.cpp  RenderSystem.cpp  StaticCollisionSystem.cpp  VelocitySystem.cpp
SDK/src/NDK/Widgets/: AbstractTextAreaWidget.cpp  (+10 more)
examples/Tut00/: CMakeLists.txt  build.lua  build_disabled.lua  main.cpp  xmake.lua
src/Nazara/Core/: AbstractAtlas.cpp  AbstractHash.cpp  AbstractImage.cpp  AbstractLogger.cpp  AlgorithmCore.cpp  Animation.cpp  AnimationBlender.cpp  AntiWindows.hpp  AntiX11.hpp  AppEntitySystemComponent.cpp  AppFilesystemComponent.cpp  Application.cpp  ApplicationBase.cpp  ApplicationComponent.cpp  ApplicationUpdater.cpp  Asset.cpp  AssetParameters.cpp  Buffer.cpp  ByteArray.cpp  ByteStream.cpp  CMakeLists.txt  Clock.cpp  Color.cpp  ConditionVariable.cpp  Core.cpp  Directory.cpp  DynLib.cpp  ECS.cpp  EmptyStream.cpp  EntitySystemAppComponent.cpp  EntityWorld.cpp  EnttSystemGraph.cpp  EnttWorld.cpp  EnvironmentVariables.cpp  Error.cpp  ErrorFlags.cpp  File.cpp  FileLogger.cpp  FilesystemAppComponent.cpp  FlecsSystemGraph.cpp  (+78 more)
src/Nazara/Graphics/: AbstractBackground.cpp  AbstractRenderQueue.cpp  AbstractRenderTechnique.cpp  AbstractViewer.cpp  AlgorithmGraphics.cpp  Background.cpp  BakedFrameGraph.cpp  BaseElementRenderPipelinePass.cpp  BaseMaterial.cpp  BasicMaterial.cpp  BasicMaterialPass.cpp  BasicRenderQueue.cpp  Billboard.cpp  BlitPipelinePass.cpp  CMakeLists.txt  Camera.cpp  ColorBackground.cpp  DebugDrawPipelinePass.cpp  DefaultFramePipeline.cpp  DeferredBloomPass.cpp  DeferredDOFPass.cpp  DeferredFXAAPass.cpp  DeferredFinalPass.cpp  DeferredFogPass.cpp  DeferredForwardPass.cpp  DeferredGeometryPass.cpp  DeferredLightScatteringPass.cpp  DeferredPhongLightingPass.cpp  DeferredProxyRenderQueue.cpp  DeferredRenderPass.cpp  DeferredRenderQueue.cpp  DeferredRenderTechnique.cpp  DepthMaterial.cpp  DepthMaterialPass.cpp  DepthPipelinePass.cpp  DepthRenderQueue.cpp  DepthRenderTechnique.cpp  DirectionalLight.cpp  DirectionalLightShadowData.cpp  Drawable.cpp  (+98 more)
src/Nazara/Network/: AbstractSocket.cpp  Algorithm.cpp  AlgorithmNetwork.cpp  CMakeLists.txt  CurlLibrary.cpp  ENetCompressor.cpp  ENetHost.cpp  ENetPacket.cpp  ENetPeer.cpp  ENetSocket.cpp  HttpClient.cpp  IoServicePool.cpp  IpAddress.cpp  NetPacket.cpp  Network.cpp  Packet.cpp  RUdpConnection.cpp  SocketPoller.cpp  SystemSocket.hpp  TcpBase.cpp  TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp  UdpSocket.cpp  WebRequest.cpp  WebRequestResult.cpp  WebService.cpp  WebServiceAppComponent.cpp
src/Nazara/Platform/: AppWindowingComponent.cpp  CMakeLists.txt  Clipboard.cpp  Cursor.cpp  Icon.cpp  Keyboard.cpp  Menu.cpp  MessageBox.cpp  Mouse.cpp  Platform.cpp  VideoMode.cpp  VideoModeImpl.hpp  Window.cpp  WindowingAppComponent.cpp
src/Nazara/Renderer/: AbstractShader.cpp  AbstractShader.hpp  AbstractShaderProgram.cpp  AbstractShaderProgram.hpp  AsyncRenderCommands.cpp  Buffer.cpp  BufferImpl.cpp  BufferImpl.hpp  CMakeLists.txt  CommandBuffer.cpp  CommandBufferBuilder.cpp  CommandPool.cpp  ComputePipeline.cpp  Context.cpp  ContextParameters.cpp  DebugDrawer.cpp  Framebuffer.cpp  GLSLProgram.cpp  GLSLProgram.hpp  GLSLShader.cpp  GLSLShader.hpp  GlslWriter.cpp  GpuAsyncCommands.cpp  GpuBuffer.cpp  GpuCommandBuffer.cpp  GpuCommandBufferBuilder.cpp  GpuCommandPool.cpp  GpuComputePipeline.cpp  GpuDevice.cpp  GpuFramebuffer.cpp  GpuPipelineLayout.cpp  GpuQuery.cpp  GpuRenderPass.cpp  GpuRenderPassCache.cpp  GpuRenderPipeline.cpp  GpuResources.cpp  GpuUploadPool.cpp  HardwareBuffer.cpp  HardwareBuffer.hpp  IndexBuffer.cpp  (+63 more)
src/Nazara/Utility/: AbstractAtlas.cpp  AbstractBuffer.cpp  AbstractFontAtlas.cpp  AbstractImage.cpp  AbstractTextDrawer.cpp  Algorithm.cpp  AlgorithmUtility.cpp  Animation.cpp  AxisAlignedBox.cpp  Buffer.cpp  BufferImpl.cpp  CMakeLists.txt  Cursor.cpp  DebugDrawComponent.cpp  FieldOffsets.cpp  Font.cpp  FontData.cpp  GuillotineImageAtlas.cpp  Icon.cpp  Image.cpp  ImageStream.cpp  IndexBuffer.cpp  IndexMapper.cpp  Joint.cpp  Keyboard.cpp  KeyframeMesh.cpp  MatrixRegistry.cpp  Mesh.cpp  Mouse.cpp  Node.cpp  PixelFormat.cpp  Resource.cpp  RichTextDrawer.cpp  SimpleTextDrawer.cpp  SkeletalMesh.cpp  Skeleton.cpp  SoftwareBuffer.cpp  SoftwareBuffer.hpp  StaticMesh.cpp  SubMesh.cpp  (+11 more)
(+5493 files in other folders)
